--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -9,13 +9,18 @@
         <li><a href="/impressum/" onclick=closeSidebar()>Impressum</a></li>
       </ul>
       <ul>
-        <li><a href="/"><img class="logo" src="/static/images/logoname2.png" alt="Logo for the company" /></a></li>
-        <li class="hideOnMobile"><a href="/aboutus/">Über Uns</a></li>
-        <li class="hideOnMobile"><a href="/portfolio/">Portfolio</a></li>
-        <li class="hideOnMobile"><a href="/anfahrt/">Anfahrt</a></li>
-        <li class="hideOnMobile"><a href="/contact/">Kontakt</a></li>
-        <li class="hideOnMobile"><a href="/impressum/">Impressum</a></li>
+        <li id="smalllogo"><a href="/"><img class="logo" src="/static/images/logo.png" alt="Logo for the company" /></a></li>
+        <li id="biglogo"><a href="/"><img class="logo" src="/static/images/logo.png" alt="Logo for the company" /></a></li>
         <li class="menubtn" onclick=showSidebar()><a href="javascript:void(0);"><img src="/static/images/open_menu.png" alt=""></a></li>
       </ul>
     </nav>
+    <div class="links">
+      <ul>
+        <li><a href="/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
+        <li><a href="/portfolio/" onclick=closeSidebar()>Portfolio</a></li>
+        <li><a href="/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
+        <li><a href="/contact/" onclick=closeSidebar()>Kontakt</a></li>
+        <li><a href="/impressum/" onclick=closeSidebar()>Impressum</a></li>
+      </ul>
+    </div>
   </div>
