--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,21 +1,22 @@
 :root{
-    --main-bg: #183642;
-    --main-bg-dark: #11262e;
+    --main-bg: #0047BB;
+    --main-bg-dark: #0047BB;
     --main-bg-secondary: #1f4757;
-    --main-sec: #313D5A;
-    --secondary: #73628A;
-    --primary: #CBC5EA;
-    --font: #EAEAEA;
+    --main-sec: #0047BB;
+    --secondary: #0047BB;
+    --primary: #003ab7;
+    --font: #000000;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
+    max-width: 100%;
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex: 1;
-    background: rgb(24,54,66);
-    background: radial-gradient(circle, rgba(24,54,66,1) 0%, rgba(20,47,58,1) 51%, rgba(31,71,87,1) 100%);
+    background: #f9faf8;
 }
 
 h1 {
@@ -55,19 +56,13 @@ a {
     background-color: var(--main-bg-dark);
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
     z-index: 999;
-    margin: 8px;
-    border: solid 0px #000000;
-    border-radius: 12px;
+    width: 100%;
 }
 
-.full {
-    border-radius: 0;
-    width: 100%;
-    margin: 0;
+.full{
     position: fixed;
     top: 0;
     left: 0;
-    transition: all 0.3s linear;
 }
 
 nav ul {
@@ -92,15 +87,53 @@ nav a {
     color: var(--font);
 }
 
-nav a:hover {
-    background-color: var(--main-bg-secondary);
-    border: var(--main-bg-secondary);
-    border-radius: 8px;
-    transition: all 1s;
+nav img {
+    height: 26px;
+    width: 26px;
+    filter: invert();
 }
 
-nav li:first-child {
+.menubtn {
+    display: block;
+}
+
+nav a:hover {
+    background-color: #f9faf8;
+    border: var(--main-bg-secondary);
+    border-radius: 4px;
+    transition: all 0.5s;
+}
+
+nav a:hover img{
+    filter: none;
+}
+
+#smalllogo {
     margin-right: auto;
+    display: none;
+}
+
+#smalllogo a:hover{
+    background: none;
+    filter: invert();
+}
+
+#biglogo {
+    height: 8em;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#biglogo img{
+    height: 8em;
+    width: auto;
+    margin-left: 12%;
+}
+
+#biglogo a:hover{
+    background: none;
+    filter: invert();
 }
 
 .logo {
@@ -136,26 +169,38 @@ nav li:first-child {
 }
 
 .sidebar li {
-    width: 100%;
     padding-top: 20px;
 }
 
 .sidebar a {
     width: 100%;
+    color: #f9faf8;
+    padding: 8px;
 }
 
 .sidebar a:hover {
     color: var(--font);
+    background-color: #f9faf8;
 }
 
-nav img {
-    height: 26px;
-    width: 26px;
-    filter: invert();
+
+
+.links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
 }
 
-.menubtn {
-    display: none;
+.links a{
+    padding: 12px;
+    color: #f9faf8;
+}
+
+.links a:hover{
+    background-color: #C7C7C7;
+    color: var(--font);
+    transition: all ease-in-out 0.5s;
 }
 
 .secone {
