--- a/src/index.njk
+++ b/src/index.njk
@@ -4,15 +4,7 @@ title: Kernbohrungen Günther | Homepage
 {% extends "base.njk" %}
 {% block content %}
   <div class="secone" id="about">
-    <img src="/static/images/name.png" alt="" srcset="">
-    <h1>Handcoded Websites</h1>
-    <h3>ohne hohe Kosten</h3>
-    <a href="/contact/">
-      <button class="seconebutton">Kontaktieren</button>
-    </a>
-    <a href="#sectwo" id="scroll-arrow">
-      <img src="/static/images/arrow-down.png" alt="Down Arrow">
-    </a>
+    <img src="" alt="">
   </div>
 
   <div class="sectwo animate hidden" id="sectwo">
