--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,8 +2,8 @@
     <nav>
       <ul class="sidebar">
         <li onclick=closeSidebar()><a href="javascript:void(0);"><img src="/static/images/close_menu.png" alt=""></a></li>
+        <li><a href="/" onclick=closeSidebar()>Startseite</a></li>
         <li><a href="/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
-        <li><a href="/portfolio/" onclick=closeSidebar()>Portfolio</a></li>
         <li><a href="/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
         <li><a href="/contact/" onclick=closeSidebar()>Kontakt</a></li>
         <li><a href="/impressum/" onclick=closeSidebar()>Impressum</a></li>
@@ -16,8 +16,8 @@
     </nav>
     <div class="links">
       <ul>
+        <li><a href="/" onclick=closeSidebar()>Startseite</a></li>
         <li><a href="/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
-        <li><a href="/portfolio/" onclick=closeSidebar()>Portfolio</a></li>
         <li><a href="/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
         <li><a href="/contact/" onclick=closeSidebar()>Kontakt</a></li>
         <li><a href="/impressum/" onclick=closeSidebar()>Impressum</a></li>
