Started with content

--- a/src/index.njk
+++ b/src/index.njk
@@ -4,10 +4,12 @@ title: Kernbohrungen Günther | Homepage
 {% extends "base.njk" %}
 {% block content %}
   <div class="secone" id="about">
-    <img src="" alt="">
+    <img src="./static/images/loch.jpg" alt="Wall Picture">
+    <h1>WILLKOMMEN BEI KERNBOHRUNGEN K.GÜNTHER</h1>
+    <h3>Ihr Spezialist für Kernbohrungen aller Arten.</h2>
   </div>
 
-  <div class="sectwo animate hidden" id="sectwo">
+  {# <div class="sectwo animate hidden" id="sectwo">
     <div class="left">
       <h2>Hilfe für Alle</h2>
       <h3>ohne Page-Builder!</h3>
@@ -74,6 +76,6 @@ title: Kernbohrungen Günther | Homepage
     <a href="/contact/">
       <button class="seconebutton">Zum Formular</button>
     </a>
-  </div>
+  </div> #}
 
 {% endblock %}
