--- a/src/index.njk
+++ b/src/index.njk
@@ -7,6 +7,40 @@ title: Kernbohrungen Günther | Homepage
     <img src="./static/images/loch.jpg" alt="Wall Picture">
     <h1>WILLKOMMEN BEI KERNBOHRUNGEN K.GÜNTHER</h1>
     <h3>Ihr Spezialist für Kernbohrungen aller Arten.</h2>
+    <p>Unser Name ist Programm: Wir sind Ihr kompetenter Partner, wenn es um professionelle Kernbohrungen geht. Ob in Bestandsgebäuden für nachträgliche Einbauten oder bei der Planung von Neubauten – Kernbohrungen sind in vielen Bereichen unverzichtbar.</p>
+    <p>Zu den typischen Anwendungsbereichen zählen:</p>
+    <ul>
+      <li>
+        <img src="./static/images/check.png" alt="Checkmark">
+        <p>Elektro- und Sanitärleitungen</p>
+      </li>
+      <li>
+        <img src="./static/images/check.png" alt="Checkmark">
+        <p>Nachträgliche Kamin- und Ofenanschlüsse</p>
+      </li>
+      <li>
+        <img src="./static/images/check.png" alt="Checkmark">
+        <p>Pool- und Schwimmbadtechnik</p>
+      </li>
+      <li>
+        <img src="./static/images/check.png" alt="Checkmark">
+        <p>Küchenabluftsysteme</p>
+      </li>
+      <li>
+        <img src="./static/images/check.png" alt="Checkmark">
+        <p>Wohnraumlüftungen</p>
+      </li>
+      <li>
+        <img src="./static/images/check.png" alt="Checkmark">
+        <p>Klimaanlageninstallationen</p>
+      </li>
+      <p>... und vieles mehr.</p>
+    </ul>
+    <p>
+      Unsere Bohrungen werden in unterschiedlichsten Durchmessern und Materialien präzise und zuverlässig durchgeführt – ganz nach Ihren individuellen Anforderungen und Gegebenheiten.
+      Kontaktieren Sie uns gerne, wenn Sie Fragen haben oder ein unverbindliches Angebot wünschen. Wir stehen Ihnen mit unserer Fachkompetenz und Erfahrung zur Seite.
+    </p>
+    <button class="seconebutton"><a href="/contact/">Kontaktieren Sie Uns</a></button>
   </div>
 
   {# <div class="sectwo animate hidden" id="sectwo">
