--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,7 +1,7 @@
 :root{
     --main-bg: #0047BB;
     --main-bg-dark: #0047BB;
-    --main-bg-secondary: #075472;
+    --main-bg-secondary: #013280;
     --main-sec: #0047BB;
     --secondary: #0047BB;
     --primary: #003ab7;
@@ -230,37 +230,71 @@ nav a:hover img{
 
 .secone img{
     width: 100%;
+    height: 24em;
     margin-top: 0;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
+    object-fit: cover;
+    object-position: 100% 80%;
 }
 
-.secone a{
-    margin-bottom: 6em;
+.secone p {
+    font-size: larger;
+    padding: 20px 40px 10px 20px;
+    text-align: justify;
+}
+
+.secone ul{
+    display: flex;
+    flex-direction: column;
+    padding-left: 2em;
+    gap: 0;
+}
+
+.secone ul li{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: baseline;
+    text-align: left;
+    gap: 1em;
+}
+
+.secone ul p {
+    padding: 0;
+    margin: 0;
+}
+
+.secone ul li img {
+    width: auto;
+    height: 18px;
+    filter: invert(11%) sepia(80%) saturate(3226%) hue-rotate(213deg) brightness(60%) contrast(99%);
+}
+
+.secone ul li p{
+    padding: 0px 40px 10px 0px;
+    margin: 0;
 }
 
 .seconebutton {
     background-color: var(--secondary);
-    color: var(--font);
     border-radius: 8px;
     font-size: large;
     padding: 0.5em 2em;
     border: 0;
     font-weight: 400;
-    margin-top: 64px;
+    margin-top: 24px;
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.75);
+    align-self: center;
+}
+
+.seconebutton a {
+    color: #f9faf8;
 }
 
 .seconebutton:hover {
     background-color: var(--main-bg-secondary);
     transition: ease-in-out 0.5s;
 }
-
-.secone a img {
-    margin: 0;
-    padding: 8px;
-    width: 3em;
-}
-
 
 .sectwo {
     display: flex;
@@ -860,10 +894,11 @@ nav a:hover img{
     pointer-events: auto;
 }
 
-
+.totop img,
 .telbutton img,
 .mailbutton img{
-    width: 24px;
+    width: 18px;
+    filter: invert();
 }
 
 .spacer {
