--- a/src/static/style.css
+++ b/src/static/style.css
@@ -192,6 +192,7 @@ nav a:hover img{
     justify-content: center;
     align-items: center;
     margin-bottom: 8px;
+    padding-bottom: 12px;
 }
 
 .links a{
@@ -986,17 +987,12 @@ form button:hover {
         color: #f9faf8;
     }
 
-    .header a {
-        font-size: small;
-    }
-
     nav ul {
         margin-right: 0;
     }
 
     .secone {
         gap: 0;
-        padding: 20px 30px;
     }
 
     .sectwo {
@@ -1082,6 +1078,10 @@ form button:hover {
     .footer {
         text-align: center;
     }
+
+    .footer ul {
+        padding: 0;
+    }
 }
 
 @media all and (max-width: 690px) {
@@ -1093,8 +1093,19 @@ form button:hover {
         width: 100%;
     }
 
-    .secone img {
-        width: 10em;
+    #biglogo img{
+        height: 6em;
+    }
+
+    .links ul{
+        justify-content: center;
+        padding: 0;
+        gap: 4px;
+        flex-wrap: wrap;
+    }
+
+    .links ul li{
+        margin-bottom: 8px;
     }
 
     .seconeleft {
@@ -1285,7 +1296,18 @@ form button:hover {
         bottom: 24px;
         right: 24px;
         opacity: 60%;
+    }
 
+    .telbutton.active {
+        bottom: 64px;
+        right: 24px;
+        opacity: 60%;
+    }
+
+    .mailbutton.active {
+        bottom: 104px;
+        right: 24px;
+        opacity: 60%;
     }
 }
 
