Small changes + finish anfahrt + responsiveness

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -646,7 +646,7 @@ nav a:hover img{
     justify-content: center;
     align-items: center;
     flex: 1;
-    padding: 3em;
+    padding: 1em 6em 3em 6em;
 }
 
 .preisliste {
@@ -1261,6 +1261,10 @@ form button:hover {
     .website-containerpo .right h3 {
         color: var(--primary);
         text-align: center;
+    }
+
+    .secthree {
+        padding: 1em 2em 1em 2em;
     }
 
     .secthreecontent {
