--- a/src/anfahrt.njk
+++ b/src/anfahrt.njk
@@ -7,7 +7,7 @@ title: webCommits web Designs
     <div class="preisliste">
       <h1>Anfahrt</h1>
     </div>
-    <p>Sie finden uns an der Grenze von Aachen. Unsere Firma ist in Würselen angesiedelt und arbeitet Deutschland-/Weltweit. Sie erreichen uns auf verschiedenen Wegen, unter anderem über unser Kontaktformular. </p>
+    <p>Sie finden uns an der Grenze von Aachen. Wir sind in Baesweiler niedergelassen und arbeiten Regional. Sie erreichen uns auf verschiedenen Wegen, unter anderem über unser Kontaktformular.</p>
     <p>Klicken Sie auf die Karte für genauere Infos.</p>
     <div class="secthreecontent">
       <!-- <img src="./static/images/preisliste.png" alt="Preisliste as pdf">
