Added animation to secone

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ title: Kernbohrungen Günther | Homepage
 ---
 {% extends "base.njk" %}
 {% block content %}
-  <div class="secone" id="about">
+  <div class="secone animate hidden" id="about">
     <img src="./static/images/loch.jpg" alt="Wall Picture">
     <h1>WILLKOMMEN BEI KERNBOHRUNGEN K.GÜNTHER</h1>
     <h3>Ihr Spezialist für Kernbohrungen aller Arten.</h2>
