Finished About us and background for new images

--- a/src/index.njk
+++ b/src/index.njk
@@ -4,11 +4,13 @@ title: Kernbohrungen Günther | Homepage
 {% extends "base.njk" %}
 {% block content %}
   <div class="secone animate hidden" id="about">
-    <img src="./static/images/loch.jpg" alt="Wall Picture">
-    <h1>WILLKOMMEN BEI KERNBOHRUNGEN K.GÜNTHER</h1>
-    <h3>Ihr Spezialist für Kernbohrungen aller Arten.</h2>
-    <p>Unser Name ist Programm: Wir sind Ihr kompetenter Partner, wenn es um professionelle Kernbohrungen geht. Ob in Bestandsgebäuden für nachträgliche Einbauten oder bei der Planung von Neubauten – Kernbohrungen sind in vielen Bereichen unverzichtbar.</p>
-    <p>Zu den typischen Anwendungsbereichen zählen:</p>
+    <div class="background">
+      <img src="./static/images/loch_filter.png" alt="Wall Picture">
+      <h1>WILLKOMMEN BEI KERNBOHRUNGEN K.GÜNTHER</h1>
+      <h3>Ihr Spezialist für Kernbohrungen aller Arten.</h3>
+      <p>Unser Name ist Programm: Wir sind Ihr kompetenter Partner, wenn es um professionelle Kernbohrungen geht. Ob in Bestandsgebäuden für nachträgliche Einbauten oder bei der Planung von Neubauten – Kernbohrungen sind in vielen Bereichen unverzichtbar.</p>
+    </div>
+    <p><strong>Zu den typischen Anwendungsbereichen zählen:</strong></p>
     <ul>
       <li>
         <img src="./static/images/check.png" alt="Checkmark">
@@ -40,7 +42,9 @@ title: Kernbohrungen Günther | Homepage
       Unsere Bohrungen werden in unterschiedlichsten Durchmessern und Materialien präzise und zuverlässig durchgeführt – ganz nach Ihren individuellen Anforderungen und Gegebenheiten.
       Kontaktieren Sie uns gerne, wenn Sie Fragen haben oder ein unverbindliches Angebot wünschen. Wir stehen Ihnen mit unserer Fachkompetenz und Erfahrung zur Seite.
     </p>
-    <button class="seconebutton"><a href="/contact/">Kontaktieren Sie Uns</a></button>
+    <button class="seconebutton">
+      <a href="/contact/">Kontaktieren Sie Uns</a>
+    </button>
   </div>
 
   {# <div class="sectwo animate hidden" id="sectwo">
