--- a/src/static/style.css
+++ b/src/static/style.css
@@ -238,6 +238,11 @@ nav a:hover img{
     object-position: 100% 80%;
 }
 
+#machinepic {
+    height: 14em;
+    object-position: 100% 20%;
+}
+
 .secone p {
     font-size: larger;
     padding: 20px 40px 10px 20px;
@@ -1108,8 +1113,35 @@ form button:hover {
         margin-bottom: 8px;
     }
 
-    .secone img {
-        height: 18em;
+    .background {
+        padding: 3em 0em;
+        position: relative;
+        z-index: 1;
+    }
+
+    .background::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        background-image: url("../static/images/loch.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: blur(8px);
+        opacity: 0.5;
+        z-index: -1;
+    }
+
+    .background img {
+        display: none;
+    }
+
+    #machinepic::before {
+        background-image: url("../static/images/loch_filter.png");
+        background-position: 60% 100%;
     }
 
     .sectwo{
