--- a/src/aboutus.njk
+++ b/src/aboutus.njk
@@ -4,7 +4,7 @@ title: Kernbohrungen Günther | Über Uns
 {% extends "base.njk" %}
 {% block content %}
 
-    <div class="secone" id="about">
+    <div class="secone animate hidden" id="about">
         <div class="background" id="machinepic">
             <img src="../static/images/loch2_filter.png" alt="Machine Picture" id="machinepic">
             <h1>ÜBER UNS</h1>
