--- a/src/contact.njk
+++ b/src/contact.njk
@@ -4,7 +4,7 @@ title: Kontakt
 {% extends "base.njk" %}
 {% block content %}
 <div class="spacer"></div>
-<div class="secone">
+<div class="secone animate hidden">
     <div class="contactformular">
         <h1>Kontaktformular</h1>
         <p>Wir haben Sie überzeugt? Schreiben Sie uns gerne eine Nachricht Ihrer Wunsch-Idee und Ihren Kontaktdaten.</p>
