Cleanup and finished contact

--- a/src/contact.njk
+++ b/src/contact.njk
@@ -3,29 +3,29 @@ title: Kontakt
 ---
 {% extends "base.njk" %}
 {% block content %}
-<div class="spacer"></div>
-<div class="secone animate hidden">
+<div class="secone">
     <div class="contactformular">
         <h1>Kontaktformular</h1>
-        <p>Wir haben Sie überzeugt? Schreiben Sie uns gerne eine Nachricht Ihrer Wunsch-Idee und Ihren Kontaktdaten.</p>
+        <p>Der einfachste Weg mit uns in Kontakt zu treten. Wir freuen uns über Ihre Nachricht.</p>
         <form id="contactForm">
-            <label for="name">Name:</label>
+            <label for="name">Name*</label>
             <input type="text" id="name" name="name" required>
 
-            <label for="number">Telefonnummer: (optional)</label>
+            <label for="number">Telefonnummer*</label>
             <input type="text" id="name" name="name">
 
-            <label for="mail">E-Mail:</label>
+            <label for="mail">E-Mail*</label>
             <input type="text" id="name" name="name">
 
-            <label for="subject">Betreff:</label>
+            <label for="subject">Betreff</label>
             <input type="text" id="subject" name="subject" required>
 
-            <label for="message">Nachricht:</label>
+            <label for="message">Nachricht</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
             <button type="submit">Absenden</button>
         </form>
+        <p>* Pflichtfelder</p>
     </div>
 </div>
 <div class="spacer"></div>
