--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ title: Kernbohrungen Günther | Homepage
     <div class="background">
       <img src="./static/images/loch_filter.png" alt="Wall Picture">
       <h1>WILLKOMMEN BEI KERNBOHRUNGEN K.GÜNTHER</h1>
-      <h3>Ihr Spezialist für Kernbohrungen aller Arten.</h3>
+      <h3>Ihr Spezialist für Kernbohrungen aller Art.</h3>
       <p>Unser Name ist Programm: Wir sind Ihr kompetenter Partner, wenn es um professionelle Kernbohrungen geht. Ob in Bestandsgebäuden für nachträgliche Einbauten oder bei der Planung von Neubauten – Kernbohrungen sind in vielen Bereichen unverzichtbar.</p>
     </div>
     <p><strong>Zu den typischen Anwendungsbereichen zählen:</strong></p>
