--- a/src/contact.njk
+++ b/src/contact.njk
@@ -3,7 +3,7 @@ title: Kontakt
 ---
 {% extends "base.njk" %}
 {% block content %}
-<div class="secone">
+<div class="secone animate hidden">
     <div class="contactformular">
         <h1>Kontaktformular</h1>
         <p>Der einfachste Weg mit uns in Kontakt zu treten. Wir freuen uns über Ihre Nachricht.</p>
