--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -4,7 +4,7 @@
   </ul>
 </div>
 <div class="buttonrow">
-  <a href="#top" class="totop"><img src="/static/images/top-arrow.png" alt="To-Top Button"></a>
-  <a href="tel:+491714779928" class="telbutton"><img src="/static/images/call-ico.png" alt="Call Icon"></a>
-  <a href="mailto:kernbohrungen.guenther@gmail.com" class="mailbutton"><img src="/static/images/mail-ico.png" alt="Mail Icon"></a>
+  <a href="#top" class="totop"><img src="{{ global.baseurl }}/static/images/top-arrow.png" alt="To-Top Button"></a>
+  <a href="tel:+491714779928" class="telbutton"><img src="{{ global.baseurl }}/static/images/call-ico.png" alt="Call Icon"></a>
+  <a href="mailto:kernbohrungen.guenther@gmail.com" class="mailbutton"><img src="{{ global.baseurl }}/static/images/mail-ico.png" alt="Mail Icon"></a>
 </div>
