--- a/src/_includes/imprsec.njk
+++ b/src/_includes/imprsec.njk
@@ -1,10 +1,10 @@
   <div class="impressum"  id="impressum">
     <div class="imprcontainer">
-    <a href="/"><img class="logo" src="/static/images/logo.png" alt="Logo for the company" /></a>
+    <a href="/"><img class="logo" src="{{ global.baseurl }}/static/images/logo.png" alt="Logo for the company" /></a>
       <div class="address">
-        <h3><a href="/impressum/">Impressum</a></h3>
+        <h3><a href="{{ global.baseurl }}/impressum/">Impressum</a></h3>
         <p><a href="/">Startseite</a></p>
-        <p><a href="/contact/">Kontaktanfragen</a></p>
+        <p><a href="{{ global.baseurl }}/contact/">Kontaktanfragen</a></p>
       </div>
     </div>
   </div>
