--- a/src/aboutus.njk
+++ b/src/aboutus.njk
@@ -6,7 +6,7 @@ title: Kernbohrungen Günther | Über Uns
 
     <div class="secone animate hidden" id="about">
         <div class="background" id="machinepic">
-            <img src="../static/images/loch2_filter.png" alt="Machine Picture" id="machinepic">
+            <img src="{{ global.baseurl }}/static/images/loch2_filter.png" alt="Machine Picture" id="machinepic">
             <h1>ÜBER UNS</h1>
             <h3>– KERNBOHRUNGEN K. GÜNTHER</h3>
             <p>Als erfahrenes Fachunternehmen sind wir Ihr zuverlässiger Partner für präzise und professionelle Kernbohrungen. Unser Anspruch ist es, stets höchste Qualität zu liefern und Ihre Erwartungen nicht nur zu erfüllen, sondern zu übertreffen.</p>
@@ -14,7 +14,7 @@ title: Kernbohrungen Günther | Über Uns
         <p>Durch den Einsatz moderner Techniken und einer Vielzahl an Materialien können wir flexibel auf Ihre individuellen Anforderungen eingehen und maßgeschneiderte Lösungen anbieten.</p>
         <p>Unser Unternehmen ist im Kreis Aachen ansässig und wir bieten unsere Dienstleistungen in einem weiten Umkreis an – immer mit dem Ziel, Ihnen die beste Leistung zu bieten.</p>
         <button class="seconebutton">
-            <a href="/contact/">Kontaktieren Sie Uns</a>
+            <a href="{{ global.baseurl }}/contact/">Kontaktieren Sie Uns</a>
         </button>
     </div>
 {% endblock %}
