--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,25 +2,25 @@
     <nav>
       <ul class="sidebar">
         <li onclick=closeSidebar()><a href="javascript:void(0);"><img src="/static/images/close_menu.png" alt=""></a></li>
-        <li><a href="/" onclick=closeSidebar()>Startseite</a></li>
-        <li><a href="/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
-        <li><a href="/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
-        <li><a href="/contact/" onclick=closeSidebar()>Kontakt</a></li>
-        <li><a href="/impressum/" onclick=closeSidebar()>Impressum</a></li>
+        <li><a href="{{ global.baseurl }}/" onclick=closeSidebar()>Startseite</a></li>
+        <li><a href="{{ global.baseurl }}/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
+        <li><a href="{{ global.baseurl }}/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
+        <li><a href="{{ global.baseurl }}/contact/" onclick=closeSidebar()>Kontakt</a></li>
+        <li><a href="{{ global.baseurl }}/impressum/" onclick=closeSidebar()>Impressum</a></li>
       </ul>
       <ul>
-        <li id="smalllogo"><a href="/"><img class="logo" src="/static/images/logo.png" alt="Logo for the company" /></a></li>
-        <li id="biglogo"><a href="/"><img class="logo" src="/static/images/logo.png" alt="Logo for the company" /></a></li>
-        <li class="menubtn" onclick=showSidebar()><a href="javascript:void(0);"><img src="/static/images/open_menu.png" alt=""></a></li>
+        <li id="smalllogo"><a href="/"><img class="logo" src="{{ global.baseurl }}/static/images/logo.png" alt="Logo for the company" /></a></li>
+        <li id="biglogo"><a href="/"><img class="logo" src="{{ global.baseurl }}/static/images/logo.png" alt="Logo for the company" /></a></li>
+        <li class="menubtn" onclick=showSidebar()><a href="javascript:void(0);"><img src="{{ global.baseurl }}/static/images/open_menu.png" alt=""></a></li>
       </ul>
     </nav>
     <div class="links">
       <ul>
-        <li><a href="/" onclick=closeSidebar()>Startseite</a></li>
-        <li><a href="/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
-        <li><a href="/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
-        <li><a href="/contact/" onclick=closeSidebar()>Kontakt</a></li>
-        <li><a href="/impressum/" onclick=closeSidebar()>Impressum</a></li>
+        <li><a href="{{ global.baseurl }}/" onclick=closeSidebar()>Startseite</a></li>
+        <li><a href="{{ global.baseurl }}/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
+        <li><a href="{{ global.baseurl }}/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
+        <li><a href="{{ global.baseurl }}/contact/" onclick=closeSidebar()>Kontakt</a></li>
+        <li><a href="{{ global.baseurl }}/impressum/" onclick=closeSidebar()>Impressum</a></li>
       </ul>
     </div>
   </div>
