--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ title: Kernbohrungen Günther | Homepage
 {% block content %}
   <div class="secone animate hidden" id="about">
     <div class="background">
-      <img src="./static/images/loch_filter.png" alt="Wall Picture">
+      <img src="{{ global.baseurl }}/static/images/loch_filter.png" alt="Wall Picture">
       <h1>WILLKOMMEN BEI KERNBOHRUNGEN K.GÜNTHER</h1>
       <h3>Ihr Spezialist für Kernbohrungen aller Art.</h3>
       <p>Unser Name ist Programm: Wir sind Ihr kompetenter Partner, wenn es um professionelle Kernbohrungen geht. Ob in Bestandsgebäuden für nachträgliche Einbauten oder bei der Planung von Neubauten – Kernbohrungen sind in vielen Bereichen unverzichtbar.</p>
@@ -13,27 +13,27 @@ title: Kernbohrungen Günther | Homepage
     <p><strong>Zu den typischen Anwendungsbereichen zählen:</strong></p>
     <ul>
       <li>
-        <img src="./static/images/check.png" alt="Checkmark">
+        <img src="{{ global.baseurl }}/static/images/check.png" alt="Checkmark">
         <p>Elektro- und Sanitärleitungen</p>
       </li>
       <li>
-        <img src="./static/images/check.png" alt="Checkmark">
+        <img src="{{ global.baseurl }}/static/images/check.png" alt="Checkmark">
         <p>Nachträgliche Kamin- und Ofenanschlüsse</p>
       </li>
       <li>
-        <img src="./static/images/check.png" alt="Checkmark">
+        <img src="{{ global.baseurl }}/static/images/check.png" alt="Checkmark">
         <p>Pool- und Schwimmbadtechnik</p>
       </li>
       <li>
-        <img src="./static/images/check.png" alt="Checkmark">
+        <img src="{{ global.baseurl }}/static/images/check.png" alt="Checkmark">
         <p>Küchenabluftsysteme</p>
       </li>
       <li>
-        <img src="./static/images/check.png" alt="Checkmark">
+        <img src="{{ global.baseurl }}/static/images/check.png" alt="Checkmark">
         <p>Wohnraumlüftungen</p>
       </li>
       <li>
-        <img src="./static/images/check.png" alt="Checkmark">
+        <img src="{{ global.baseurl }}/static/images/check.png" alt="Checkmark">
         <p>Klimaanlageninstallationen</p>
       </li>
       <p>... und vieles mehr.</p>
@@ -43,7 +43,7 @@ title: Kernbohrungen Günther | Homepage
       Kontaktieren Sie uns gerne, wenn Sie Fragen haben oder ein unverbindliches Angebot wünschen. Wir stehen Ihnen mit unserer Fachkompetenz und Erfahrung zur Seite.
     </p>
     <button class="seconebutton">
-      <a href="/contact/">Kontaktieren Sie Uns</a>
+      <a href="{{ global.baseurl }}/contact/">Kontaktieren Sie Uns</a>
     </button>
   </div>
 
