Fixed missing cross icon

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,7 +1,7 @@
 <div class="header">
     <nav>
       <ul class="sidebar">
-        <li onclick=closeSidebar()><a href="javascript:void(0);"><img src="/static/images/close_menu.png" alt=""></a></li>
+        <li onclick=closeSidebar()><a href="javascript:void(0);"><img src="{{ global.baseurl }}/static/images/close_menu.png" alt=""></a></li>
         <li><a href="{{ global.baseurl }}/" onclick=closeSidebar()>Startseite</a></li>
         <li><a href="{{ global.baseurl }}/aboutus/" onclick=closeSidebar()>Über Uns</a></li>
         <li><a href="{{ global.baseurl }}/anfahrt/" onclick=closeSidebar()>Anfahrt</a></li>
