--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -16,10 +16,10 @@
 
     @media all and (max-width: 690px) {
       .background::before{
-          background-image: url("/kernbohrungen-guenther/static/images/loch.jpg");
+          background-image: url("{{ global.baseurl }}/static/images/loch.jpg");
       }
       #machinepic::before {
-          background-image: url("/kernbohrungen-guenther/static/images/loch_filter.png");
+          background-image: url("{{ global.baseurl }}/static/images/loch_filter.png");
       }
     }
   </style>
