Added margin to main content when animating header

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -18,8 +18,10 @@
 
 <body>
   {% include "header.njk" %}
-  
+  <div class="main-content">
   {% block content %} {% endblock %}
+  </div>
+
 
   {% include "imprsec.njk" %}
   {% include "footer.njk" %}
